Project3/405410100_submit/CactusParser.java
// Generated from Cactus.g4 by ANTLR 4.8

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CactusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, ELSE=3, FI=4, IF=5, INT=6, MAIN=7, READ=8, RETURN=9, 
		MINUS=10, DIGIT=11, WHILE=12, WRITE=13, ASSIGNMENT=14, ADD=15, MULTIPLY=16, 
		DIVIDE=17, MODULO=18, EQUAL=19, NEQUAL=20, GREATER=21, GREATEREQUAL=22, 
		LESS=23, LESSEQUAL=24, AND=25, OR=26, NEGATION=27, LeftParen=28, RightParen=29, 
		LeftBrace=30, RightBrace=31, COMMA=32, SEMI=33, ID=34, Whitespace=35, 
		Newline=36, BlockComment=37, LineComment=38;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_else_statement = 4, RULE_bool_expression = 5, RULE_bool_expression1 = 6, 
		RULE_bool_term = 7, RULE_bool_term1 = 8, RULE_bool_factor = 9, RULE_rel_expression = 10, 
		RULE_relation_op = 11, RULE_arith_expression = 12, RULE_arith_expression1 = 13, 
		RULE_arith_term = 14, RULE_arith_term1 = 15, RULE_arith_factor = 16, RULE_primary_expression = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "statements", "statement", "else_statement", 
			"bool_expression", "bool_expression1", "bool_term", "bool_term1", "bool_factor", 
			"rel_expression", "relation_op", "arith_expression", "arith_expression1", 
			"arith_term", "arith_term1", "arith_factor", "primary_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'else'", "'fi'", "'if'", "'int'", "'main'", 
			"'read'", "'return'", "'-'", null, "'while'", "'write'", "'='", "'+'", 
			"'*'", "'/'", "'%'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", 
			"'||'", "'!'", "'('", "')'", "'{'", "'}'", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "ELSE", "FI", "IF", "INT", "MAIN", "READ", "RETURN", 
			"MINUS", "DIGIT", "WHILE", "WRITE", "ASSIGNMENT", "ADD", "MULTIPLY", 
			"DIVIDE", "MODULO", "EQUAL", "NEQUAL", "GREATER", "GREATEREQUAL", "LESS", 
			"LESSEQUAL", "AND", "OR", "NEGATION", "LeftParen", "RightParen", "LeftBrace", 
			"RightBrace", "COMMA", "SEMI", "ID", "Whitespace", "Newline", "BlockComment", 
			"LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cactus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CactusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(CactusParser.MAIN, 0); }
		public TerminalNode LeftParen() { return getToken(CactusParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(CactusParser.RightParen, 0); }
		public TerminalNode LeftBrace() { return getToken(CactusParser.LeftBrace, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RightBrace() { return getToken(CactusParser.RightBrace, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(MAIN);
			setState(37);
			match(LeftParen);
			setState(38);
			match(RightParen);
			setState(39);
			match(LeftBrace);
			System.out.println("\t.data");
			setState(41);
			declarations();
			System.out.println("\t"+".text");System.out.println("main:");
			setState(43);
			statements(0, 1);
			setState(44);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode INT() { return getToken(CactusParser.INT, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(CactusParser.SEMI, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(INT);
				setState(47);
				((DeclarationsContext)_localctx).ID = match(ID);
				System.out.println((((DeclarationsContext)_localctx).ID!=null?((DeclarationsContext)_localctx).ID.getText():null) + ":" + "\t.word 0");
				setState(49);
				match(SEMI);
				setState(50);
				declarations();
				}
				break;
			case IF:
			case READ:
			case RETURN:
			case WHILE:
			case WRITE:
			case RightBrace:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementContext x;
		public StatementsContext y;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(int reg,int label) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 4, RULE_statements);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case READ:
			case RETURN:
			case WHILE:
			case WRITE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				((StatementsContext)_localctx).x = statement(_localctx.reg, _localctx.label);
				setState(55);
				((StatementsContext)_localctx).y = statements(((StatementsContext)_localctx).x.nreg, ((StatementsContext)_localctx).x.nlabel);
				((StatementsContext)_localctx).nreg =  ((StatementsContext)_localctx).y.nreg;((StatementsContext)_localctx).nlabel = ((StatementsContext)_localctx).y.nlabel;
				}
				break;
			case RightBrace:
				enterOuterAlt(_localctx, 2);
				{
				((StatementsContext)_localctx).nreg =  _localctx.reg; ((StatementsContext)_localctx).nlabel =  _localctx.label;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Token ID;
		public Arith_expressionContext x;
		public Bool_expressionContext m;
		public StatementsContext y;
		public Else_statementContext n;
		public Bool_expressionContext i;
		public StatementsContext z;
		public Arith_expressionContext k;
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(CactusParser.ASSIGNMENT, 0); }
		public TerminalNode SEMI() { return getToken(CactusParser.SEMI, 0); }
		public Arith_expressionContext arith_expression() {
			return getRuleContext(Arith_expressionContext.class,0);
		}
		public TerminalNode IF() { return getToken(CactusParser.IF, 0); }
		public TerminalNode LeftParen() { return getToken(CactusParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(CactusParser.RightParen, 0); }
		public TerminalNode LeftBrace() { return getToken(CactusParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CactusParser.RightBrace, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Else_statementContext else_statement() {
			return getRuleContext(Else_statementContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(CactusParser.WHILE, 0); }
		public TerminalNode READ() { return getToken(CactusParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(CactusParser.WRITE, 0); }
		public TerminalNode RETURN() { return getToken(CactusParser.RETURN, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement(int reg,int label) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((StatementContext)_localctx).ID = match(ID);
				setState(62);
				match(ASSIGNMENT);
				setState(63);
				((StatementContext)_localctx).x = arith_expression(_localctx.reg);
				System.out.println("\tla\t$" + "t" + ((StatementContext)_localctx).x.nreg + ", " + (((StatementContext)_localctx).ID!=null?((StatementContext)_localctx).ID.getText():null));System.out.println("\tsw\t$" + "t" + ((StatementContext)_localctx).x.place + ", " + "0($" + "t" + ((StatementContext)_localctx).x.nreg + ")" );((StatementContext)_localctx).nreg =  ((StatementContext)_localctx).x.nreg-1; ((StatementContext)_localctx).nlabel =  _localctx.label;
				setState(65);
				match(SEMI);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				System.out.println("\t#if");
				setState(68);
				match(IF);
				setState(69);
				match(LeftParen);
				setState(70);
				((StatementContext)_localctx).m = bool_expression(_localctx.reg, _localctx.label+4, _localctx.label, _localctx.label+1);
				System.out.println("L" + _localctx.label + ":\t#then");
				setState(72);
				match(RightParen);
				setState(73);
				match(LeftBrace);
				setState(74);
				((StatementContext)_localctx).y = statements(((StatementContext)_localctx).m.nreg, ((StatementContext)_localctx).m.nlabel);
				System.out.printf("\tb\tL%d\n", _localctx.label+2);System.out.printf("L%d:\t#else\n", _localctx.label+1);
				setState(76);
				match(RightBrace);
				setState(77);
				((StatementContext)_localctx).n = else_statement(((StatementContext)_localctx).y.nreg, ((StatementContext)_localctx).y.nlabel);
				System.out.printf("L%d:\t#end if\n", _localctx.label+2);((StatementContext)_localctx).nreg =  ((StatementContext)_localctx).m.nreg;((StatementContext)_localctx).nlabel =  _localctx.label+4;
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				System.out.printf("L%d:\t#while\n", _localctx.label+1);
				setState(81);
				match(WHILE);
				setState(82);
				match(LeftParen);
				setState(83);
				((StatementContext)_localctx).i = bool_expression(_localctx.reg, _localctx.label+5, _localctx.label+2, _localctx.label+3);
				System.out.printf("L%d:\t#while body\n", _localctx.label+2);
				setState(85);
				match(RightParen);
				setState(86);
				match(LeftBrace);
				setState(87);
				((StatementContext)_localctx).z = statements(((StatementContext)_localctx).i.nreg, ((StatementContext)_localctx).i.nlabel);
				System.out.printf("\tb\tL%d\n", _localctx.label+1);System.out.printf("L%d:\t#end while\n", _localctx.label+3);((StatementContext)_localctx).nreg =  ((StatementContext)_localctx).z.nreg; ((StatementContext)_localctx).nlabel =  ((StatementContext)_localctx).z.nlabel;
				setState(89);
				match(RightBrace);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				match(READ);
				setState(92);
				((StatementContext)_localctx).ID = match(ID);
				System.out.println("\tli\t$" + "v0" + ", " + "5");System.out.println("\tsyscall");System.out.println("\tla\t$" + "t" + _localctx.reg + ", " + (((StatementContext)_localctx).ID!=null?((StatementContext)_localctx).ID.getText():null));System.out.println("\tsw\t$" + "v0" + ", " + "0($" + "t" + _localctx.reg + ")" );((StatementContext)_localctx).nreg =  _localctx.reg;((StatementContext)_localctx).nlabel =  _localctx.label;
				setState(94);
				match(SEMI);
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				match(WRITE);
				setState(96);
				((StatementContext)_localctx).k = arith_expression(_localctx.reg);
				System.out.println("\tmove $" + "a0" + ", " + "$" + "t" + ((StatementContext)_localctx).k.place);System.out.println("\tli\t$" + "v0" + ", " + "1");System.out.println("\tsyscall");((StatementContext)_localctx).nreg =  _localctx.reg;((StatementContext)_localctx).nlabel =  _localctx.label;
				setState(98);
				match(SEMI);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				match(RETURN);
				System.out.println("\tli\t$" + "v0" + ", " + "10");System.out.println("\tsyscall");((StatementContext)_localctx).nreg =  _localctx.reg;((StatementContext)_localctx).nlabel =  _localctx.label;
				setState(102);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_statementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementsContext x;
		public TerminalNode ELSE() { return getToken(CactusParser.ELSE, 0); }
		public TerminalNode LeftBrace() { return getToken(CactusParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CactusParser.RightBrace, 0); }
		public TerminalNode FI() { return getToken(CactusParser.FI, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Else_statementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Else_statementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_else_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterElse_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitElse_statement(this);
		}
	}

	public final Else_statementContext else_statement(int reg,int label) throws RecognitionException {
		Else_statementContext _localctx = new Else_statementContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 8, RULE_else_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(ELSE);
				setState(106);
				match(LeftBrace);
				setState(107);
				((Else_statementContext)_localctx).x = statements(_localctx.reg, _localctx.label);
				((Else_statementContext)_localctx).nreg =  ((Else_statementContext)_localctx).x.nreg; ((Else_statementContext)_localctx).nlabel =  ((Else_statementContext)_localctx).x.nlabel;
				setState(109);
				match(RightBrace);
				setState(110);
				match(FI);
				}
				break;
			case FI:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(FI);
				((Else_statementContext)_localctx).nreg = _localctx.reg;((Else_statementContext)_localctx).nlabel = _localctx.label;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
